--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     --secondarydark: #06121B;
     --accent:#D0A85C;
 }
-  *{
+*{
     margin: 0;
     text-align: center;
     text-decoration: none;
@@ -15,7 +15,13 @@
 }
 body{
     background-color: #000913;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
+
+/* This is for the buttons that are images */
 li {
     list-style-type: none;
     margin: auto;
@@ -30,12 +36,6 @@ li img {
   /*                                     */
  /*              Containers             */
 /*                                     */
-.completepage {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
 .circle {
     background: var(--accent);
     border-radius: 50%;
@@ -47,12 +47,8 @@ li img {
     flex-direction: column;
     height: 100%;
     align-items: center;
-}
-.paso1 {
     justify-content: space-evenly;
 }
-
-
 
 
   /*                                     */
@@ -81,6 +77,8 @@ li img {
   /*                                     */
  /*                 Text                */
 /*                                     */
+
+/* Page1 */
 .title{
     font-size: 3.5rem;
     color: var(--primarydark)
@@ -91,10 +89,14 @@ li img {
     color: var(--secondarydark)
 }
 
+/* Page2 */
+.timeSelector {
+    border: none;
+    background-color: var(--accent);
+    font-size: 3em;
+}
 
-
-
-
+/* Page3 */
 .text-container {
     display: flex;
     flex-direction: column;
