--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ li img {
     height: 77px;
 }
 
+input[type="time"]::-webkit-calendar-picker-indicator { background: none; display:none; }
+
 
   /*                                     */
  /*              Containers             */
@@ -69,15 +71,6 @@ li img {
     background-color: var(--secondarydark);
 }
 
-.btn-page2{
-    height: 77px;
-    width: 77px;
-    background: url("icons/play-circle.png");
-    border: none;
-}
-
-
-
 
 
   /*                                     */
@@ -99,7 +92,7 @@ li img {
 .timeSelector {
     border: none;
     background-color: var(--primarygray);
-    font-size: 3em;
+    font-size: 7em;
 }
 
 /* Page3 */
@@ -109,19 +102,9 @@ li img {
     justify-content: space-around;
 }
 
-#totalTime{
-    margin-top: 10px;
-    font-size: 4em;
-    color: #767676;
-
-}
-#currentTime{
-    font-size: 1.5em;
-    color: #767676;
-}
 
 #remainingTime{
-    color: #06121B;
+    color: var(--primarydark);
     font-size: 7em;
     line-height: 1em;
 }
@@ -163,19 +146,6 @@ li img {
     animation-duration: 0.2s;
     animation-iteration-count: 1;
     animation-direction: alternate-reverse;
-}
-.min-max{
-    animation-name: rotate;
-    animation-duration: 0.2s;
-    animation-iteration-count: 1;
-    animation-direction: alternate-reverse;
-}
-
-
-
-@keyframes min-max {
-    from {height: 77px; padding: 0;}
-    to {height: 20px; padding: 20px 37px 0 20px;}
 }
 
 @keyframes rotate {
