--- a/style.css
+++ b/style.css
@@ -73,7 +73,10 @@ li img {
     border: none;
 }
 
-
+img:hover {
+    opacity: 0.5;
+    transition: .3s ease-in-out;
+}
 
   /*                                     */
  /*                 Text                */
@@ -151,8 +154,19 @@ li img {
     animation-iteration-count: 1;
     animation-direction: alternate-reverse;
 }
+.ringring{
+    animation-name: ringring;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
 
 @keyframes rotate {
     from {transform: rotate(180deg);}
     to {transform: rotate(360deg);}
+}
+
+@keyframes ringring {
+    from { background-color: var(--accent);}
+    to { background-color: red;}
 }
